packages/typ/tests/fixtures/diagnostics/0868_gadt_local_abstract_return_mismatch_01.ml.expected
File "0868_gadt_local_abstract_return_mismatch_01.ml", line 1:
Warning 24 [bad-module-name]: bad source file name: 0868_gadt_local_abstract_return_mismatch_01 is not a valid module name.

File "0868_gadt_local_abstract_return_mismatch_01.ml", line 9, characters 21-22:
9 |     | WBool_alpha -> x
                         ^
Error: The value x has type a = bool but an expression was expected of type
         int
